--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
 command = "npm ci && npm run build"
 publish = "dist"
+functions = "netlify/functions"
 
 [build.environment]
 NODE_VERSION = "20"
@@ -10,3 +11,8 @@ NPM_FLAGS = "--no-fund --no-audit"
 command = "npm run dev"
 framework = "vite"
 targetPort = 5173
+
+[build]
+command = "npm install && npm run build"
+publish = "dist"
+functions = "netlify/functions"
