--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
-    "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@neondatabase/serverless": "^0.10.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
@@ -34,7 +34,8 @@
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "netlify-cli": "^17.33.4"
   },
   "type": "module"
 }
